The Solution of Equal Sides Of An Array V2

--- a/Equal Sides Of An Array.ipynb
+++ b/Equal Sides Of An Array.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71731ac9",
+   "id": "cbd13fcf",
    "metadata": {},
    "source": [
     "test.assert_equals(find_even_index([1,2,3,4,3,2,1]),3)\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be25dff4",
+   "id": "b0d5d896",
    "metadata": {},
    "source": [
     "- bulundugu indexi saymıyor \n",
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "944cfa68",
+   "id": "087e2423",
    "metadata": {},
    "outputs": [
     {
@@ -96,6 +96,20 @@
     "        if temp == None:\n",
     "            return -1\n",
     "    else: pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8efda3c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_even_index(arr):\n",
+    "    for i in range(len(arr)):\n",
+    "        if sum(arr[:i]) == sum(arr[i+1:]):\n",
+    "            return i\n",
+    "    return -1"
    ]
   }
  ],
